[gd_scene load_steps=11 format=2]

[ext_resource path="res://animations/we off the.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://animations/2l.png" type="Texture" id=5]
[ext_resource path="res://animations/2r.png" type="Texture" id=6]
[ext_resource path="res://animations/2m.png" type="Texture" id=7]
[ext_resource path="res://animations/1.png" type="Texture" id=8]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "left",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "right",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "middle",
"speed": 3.0
} ]

[node name="Main" type="Node"]
script = ExtResource( 4 )
mob_scene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.5
margin_top = -162.5
margin_right = 162.5
margin_bottom = 162.5
texture = ExtResource( 1 )

[node name="warningBottom" type="AnimatedSprite" parent="."]
position = Vector2( 360.5, 408 )
frames = SubResource( 1 )
animation = "left"

[node name="warningRight" type="AnimatedSprite" parent="."]
position = Vector2( 528, 240.5 )
rotation = 4.71239
frames = SubResource( 1 )
animation = "left"

[node name="warningTop" type="AnimatedSprite" parent="."]
position = Vector2( 360.5, 73 )
rotation = 3.14159
frames = SubResource( 1 )
animation = "left"

[node name="warningLeft" type="AnimatedSprite" parent="."]
position = Vector2( 193, 240.5 )
rotation = 1.5708
frames = SubResource( 1 )
animation = "left"

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="mobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="playerStart" type="Position2D" parent="."]
position = Vector2( 360, 240 )

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mobTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
